# pbrt-rust

./: Cargo.toml
src/: main.rs  ray.rs  sampling.rs  specular.rs  sphere.rs
