[package]
name = "pbrt"
version = "0.1.0"
authors = ["Laurent Laborde <kerdezixe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
chrono = "0.4.19"
# vek = { version = "0.15.0", features = ["rgb"] }
ultraviolet = "0.8.0"
rand = "0.8.3"
image = "0.23.14"
